<resources>
    <string name="app_name">WalletTest</string>
    <string name="none">none</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="userName">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty">Field can not be empty</string>
</resources>
